Fix problem wiht info component on smaller devices

--- a/src/components/info/Info.module.css
+++ b/src/components/info/Info.module.css
@@ -5,5 +5,5 @@
     background-color: var(--primary);
     border-radius: 5px;
     box-shadow: var(--box-shadow-large);
-    padding: 20px
+    padding: 20px;
 }
